# event_orin_drone

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md
comms/: mavlink-router.conf
docker/: Dockerfile  build_docker_jetson.sh  build_docker_x86.sh  build_jetson-containers.sh  entrypoint.sh  requirements.txt
fc/: event-orin.params  holybro_kakuteh7mini_default.px4
orin/: .tmux.conf  configure_orin.sh  drone_flight.sh  fix_wifi_till.sh
pics/: event_orin_drone.drawio
prints/: bottom.stl  bottom_plate.stl  camera_holder.stl  flow_shell.stl  realsense_attachement.stl  realsense_holder_removable.stl  spacer_for_cam_mount.stl  top.stl
ros/: build_ros.sh
ros/src/depth_estimation/: package.xml  setup.py
ros/src/depth_estimation/depth_estimation/: monodepth.py
ros/src/depth_utils/: CMakeLists.txt  package.xml
ros/src/depth_utils/src/: depth_to_bins.cpp
ros/src/eo_drone/: CMakeLists.txt  package.xml
ros/src/eo_drone/include/: depth_seeker.hpp  fly_square.hpp
ros/src/eo_drone/launch/: drone_flight_recorder.launch.py  sim_example.launch.py  sim_external_modes.launch.py  sim_network_control.launch.py
ros/src/eo_drone/src/: depth_seeker.cpp  fly_square.cpp
scripts/: drone_flight.sh  move_logs_to_drive.sh
sensors/: dvx_calib_normal.xml  set_udev_rules.sh  unsafe_usb_udev.sh
sim/: px4_gazebo_sim_depth.sh  px4_gazebo_sim_example.sh  px4_gazebo_sim_external_modes.sh  px4_gazebo_sim_fly_square.sh  px4_gazebo_sim_network_control.sh
