<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eo_drone</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO: License declaration</license>

  <!-- ROS2 dependencies -->
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- OpenCV dependency -->
  <!-- ignore opencv for now; put python-opencv later? -->
  <!-- <build_depend>opencv4</build_depend>
  <exec_depend>opencv4</exec_depend> -->

  <!-- buildtool dependencies at build time -->
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
  <!-- dependencies at build time -->
  <build_depend>eigen</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_export_depend>eigen</build_export_depend>
  <!-- dependencies during build and execution -->
  <depend>px4_ros2_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
